ci: create workflow for pr title format
Closes #1

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,11 +20,11 @@ jobs:
       - name: 🪖 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 22
           cache: "pnpm"
 
       - name: 📦 Install Dependencies
-        run: pnpm install -D
+        run: pnpm install
 
       - name: 🚀 Run Prettier
         run: pnpm run check
