--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 🪖 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 22
           cache: "pnpm"
 
       - name: 📦 Install Dependencies
