feat: create /projects
Closes #5

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -8,10 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false'
+    if: github.event.pull_request.draft == false
 
     steps:
       - uses: Slashgear/action-check-pr-title@v4.3.0
         with:
           regexp: "(feat|fix|docs|refactor|chore|remove|ci): .+" # Regex the title should match.
-          helpMessage: "example: 'fix: add src to content in tailwind config"
+          helpMessage: "example: 'fix: add tailwindcss plugin to astro config'"
