--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
     "nanostores": "^0.11.4",
+    "notion-astro-loader": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
